[tool.poetry]
name = "jason-v4-personal"
version = "1.13"
description = "A version of Jason that have poetry and docker-related config-files."
authors = ["AusAura <91804331+AusAura@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
